@@ -29,7 +29,7 @@
  * To allow #EpcConsumer to find it, it automatically publishes
  * its contact information (host name, TCP/IP port) per DNS-SD.
  *
- * Currently neither encryption or autentication are implemented,
+ * Currently neither encryption or authentication are implemented,
  * but it is planed to change this in the future.
  *
  * Also there are some ideas on using DNS-DS to notify #EpcConsumer on changes.
@@ -68,19 +68,25 @@ enum
   PROP_SERVICE
 };
 
+/**
+ * EpcContent:
+ *
+ * A reference counted buffer for storing content to deliver by the
+ * #EpcPublisher. Use #epc_content_new to create instances of this buffer.
+ */
 struct _EpcContent
 {
   volatile gint ref_count;
-  gsize  length;
-  gchar *data;
-  gchar *type;
+  gsize         length;
+  gpointer      data;
+  gchar        *type;
 };
 
 struct _EpcPublication
 {
-  EpcPublisherHandler handler;
-  gpointer            user_data;
-  GDestroyNotify      destroy_data;
+  EpcContentHandler handler;
+  gpointer          user_data;
+  GDestroyNotify    destroy_data;
 };
 
 /**
@@ -99,9 +105,20 @@ struct _EpcPublisherPrivate
   gchar *service;
 };
 
+/**
+ * epc_content_new:
+ * @type: the MIME type of this content, or %NULL
+ * @data: the contents for this buffer
+ * @length: the content length in bytes
+ *
+ * Creates a new #EpcContent buffer.
+ * Passing %NULL for @type is equivalent to passing "application/octet-stream".
+ *
+ * Returns: The newly created #EpcContent buffer.
+ */
 EpcContent*
 epc_content_new (const gchar *type,
-                 gchar       *data,
+                 gpointer     data,
                  gsize        length)
 {
   EpcContent *content = g_slice_new0 (EpcContent);
@@ -117,6 +134,14 @@ epc_content_new (const gchar *type,
   return content;
 }
 
+/**
+ * epc_content_ref:
+ * @content: a EpcContent buffer
+ *
+ * Increases the reference count of @content.
+ *
+ * Returns: the same @content buffer.
+ */
 EpcContent*
 epc_content_ref (EpcContent *content)
 {
@@ -125,24 +150,27 @@ epc_content_ref (EpcContent *content)
   return content;
 }
 
-EpcContent*
+/**
+ * epc_content_unref:
+ * @content: a EpcContent buffer
+ *
+ * Decreases the reference count of @content.
+ * When its reference count drops to 0, the buffer is released
+ * (i.e. its memory is freed).
+ */
+void
 epc_content_unref (EpcContent *content)
 {
-  g_return_val_if_fail (NULL != content, NULL);
+  g_return_if_fail (NULL != content);
 
   if (g_atomic_int_dec_and_test (&content->ref_count))
-    {
-      g_slice_free (EpcContent, content);
-      content = NULL;
-    }
-
-  return content;
+    g_slice_free (EpcContent, content);
 }
 
 static EpcPublication*
-epc_publication_new (EpcPublisherHandler handler,
-                     gpointer            user_data,
-                     GDestroyNotify      destroy_data)
+epc_publication_new (EpcContentHandler handler,
+                     gpointer          user_data,
+                     GDestroyNotify    destroy_data)
 {
   EpcPublication *publication = g_slice_new0 (EpcPublication);
 
@@ -424,7 +452,7 @@ epc_publisher_class_init (EpcPublisherClass *cls)
 
 /**
  * epc_publisher_new:
- * @name: the humany friendly service name, or %NULL
+ * @name: the human friendly service name, or %NULL
  * @service: the DNS-SD service name, or %NULL
  * @domain: the DNS domain, or %NULL
  *
@@ -451,7 +479,7 @@ epc_publisher_new (const gchar *name,
 
 /**
  * epc_publisher_add:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  * @key: the key for addressing the value
  * @value: the value to publish
  * @length: the length of @value in bytes, or -1.
@@ -501,7 +529,7 @@ epc_publisher_add (EpcPublisher  *self,
 
 /**
  * epc_publisher_add_file:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  * @key: the key for addressing the file
  * @filename: the name of the file to publish
  *
@@ -523,12 +551,27 @@ epc_publisher_add_file (EpcPublisher  *self,
                              g_strdup (filename), g_free);
 }
 
+/**
+ * epc_publisher_add_handler:
+ * @publisher: a #EpcPublisher
+ * @key: the key for addressing the content
+ * @handler: the #EpcContentHandler for handling this content
+ * @user_data: data to pass on @handler calls
+ * @destroy_data: a function for releasing @user_data
+ *
+ * Publishes content on the #EpcPublisher which is generated by a custom
+ * #EpcContentHandler. This is the most flexible method for publishing
+ * information. The @handler is called on every request matching @key.
+ * On this call @publisher, @key and @user_data are passed to the @handler.
+ * When replacing or deleting this publication, the function described
+ * by @destroy_data is called with @user_data as argument.
+ */
 void
-epc_publisher_add_handler (EpcPublisher        *self,
-                           const gchar         *key,
-                           EpcPublisherHandler  handler,
-                           gpointer             user_data,
-                           GDestroyNotify       destroy_data)
+epc_publisher_add_handler (EpcPublisher      *self,
+                           const gchar       *key,
+                           EpcContentHandler  handler,
+                           gpointer           user_data,
+                           GDestroyNotify     destroy_data)
 {
   EpcPublication *publication;
 
@@ -542,7 +585,7 @@ epc_publisher_add_handler (EpcPublisher        *self,
 
 /**
  * epc_publisher_set_name:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  * @name: the new name of this #EpcPublisher
  *
  * Changes the human friendly name this #EpcPublisher uses
@@ -558,7 +601,7 @@ epc_publisher_set_name (EpcPublisher *self,
 
 /**
  * epc_publisher_get_name:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Queries the human friendly name this #EpcPublisher uses
  * to announce its service. See #EpcPublisher:name for details.
@@ -574,7 +617,7 @@ epc_publisher_get_name (EpcPublisher *self)
 
 /**
  * epc_publisher_get_domain:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Queries the DNS domain for which this #EpcPublisher announces its service.
  * See #EpcPublisher:domain for details.
@@ -590,7 +633,7 @@ epc_publisher_get_domain (EpcPublisher *self)
 
 /**
  * epc_publisher_get_service:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Queries the DNS-SD service name of this #EpcPublisher.
  * See #EpcPublisher:service for details.
@@ -606,7 +649,7 @@ epc_publisher_get_service (EpcPublisher *self)
 
 /**
  * epc_publisher_run:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Starts the server component of the #EpcPublisher
  * and blocks until it is shutdown using #epc_publisher_quit.
@@ -622,7 +665,7 @@ epc_publisher_run (EpcPublisher *self)
 
 /**
  * epc_publisher_run_async:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Starts the server component of the #EpcPublisher without blocking.
  * To start the server without blocking call #epc_publisher_run_async.
@@ -637,7 +680,7 @@ epc_publisher_run_async (EpcPublisher *self)
 
 /**
  * epc_publisher_quit:
- * @publisher: the publisher
+ * @publisher: a #EpcPublisher
  *
  * Stops the server component of the #EpcPublisher
  * started with #epc_publisher_run or #epc_publisher_run_async.
@@ -648,3 +691,5 @@ epc_publisher_quit (EpcPublisher *self)
   g_return_if_fail (EPC_IS_PUBLISHER (self));
   soup_server_quit (self->priv->server);
 }
+
+/* vim: set sw=2 sta et spl=en spell: */
