@@ -37,7 +37,21 @@ typedef struct _EpcPublisher                    EpcPublisher;
 typedef struct _EpcPublisherClass               EpcPublisherClass;
 typedef struct _EpcPublisherPrivate             EpcPublisherPrivate;
 
-typedef EpcContent* (*EpcPublisherHandler)     (EpcPublisher        *publisher,
+/**
+ * EpcContentHandler:
+ * @publisher: the #EpcPublisher
+ * @key: the unique key
+ * @user_data: custom information for the handler
+ *
+ * This callback is used to generate custom content published with the
+ * #epc_publisher_add_handler function. The arguments passed are the same as
+ * passed to #epc_publisher_add_handler. The #EpcPublisher will decrease the
+ * reference count of the returned buffer after deliving it. It's valid to
+ * return %NULL in situations were no content can be generated.
+ *
+ * Returns: The #EpcContent buffer for this publication, or %NULL.
+ */
+typedef EpcContent* (*EpcContentHandler)       (EpcPublisher        *publisher,
                                                 const gchar         *key,
                                                 gpointer             user_data);
 
@@ -67,38 +81,38 @@ struct _EpcPublisherClass
 
 GType                epc_publisher_get_type    (void) G_GNUC_CONST;
 
-EpcPublisher*        epc_publisher_new         (const gchar         *name,
-                                                const gchar         *service,
-                                                const gchar         *domain);
+EpcPublisher*        epc_publisher_new         (const gchar       *name,
+                                                const gchar       *service,
+                                                const gchar       *domain);
 
-void                 epc_publisher_set_name    (EpcPublisher        *publisher,
-                                                const gchar         *name);
-G_CONST_RETURN char* epc_publisher_get_name    (EpcPublisher        *publisher);
-G_CONST_RETURN char* epc_publisher_get_domain  (EpcPublisher        *publisher);
-G_CONST_RETURN char* epc_publisher_get_service (EpcPublisher        *publisher);
+void                 epc_publisher_set_name    (EpcPublisher      *publisher,
+                                                const gchar       *name);
+G_CONST_RETURN char* epc_publisher_get_name    (EpcPublisher      *publisher);
+G_CONST_RETURN char* epc_publisher_get_domain  (EpcPublisher      *publisher);
+G_CONST_RETURN char* epc_publisher_get_service (EpcPublisher      *publisher);
 
-void                 epc_publisher_add         (EpcPublisher        *publisher,
-                                                const gchar         *key,
-                                                const gchar         *value,
-                                                gssize               length);
-void                 epc_publisher_add_file    (EpcPublisher        *publisher,
-                                                const gchar         *key,
-                                                const gchar         *filename);
-void                 epc_publisher_add_handler (EpcPublisher        *publisher,
-                                                const gchar         *key,
-                                                EpcPublisherHandler  handler,
-                                                gpointer             user_data,
-                                                GDestroyNotify       destroy_data);
+void                 epc_publisher_add         (EpcPublisher      *publisher,
+                                                const gchar       *key,
+                                                const gchar       *value,
+                                                gssize             length);
+void                 epc_publisher_add_file    (EpcPublisher      *publisher,
+                                                const gchar       *key,
+                                                const gchar       *filename);
+void                 epc_publisher_add_handler (EpcPublisher      *publisher,
+                                                const gchar       *key,
+                                                EpcContentHandler  handler,
+                                                gpointer           user_data,
+                                                GDestroyNotify     destroy_data);
 
-void                 epc_publisher_run         (EpcPublisher        *publisher);
-void                 epc_publisher_run_async   (EpcPublisher        *publisher);
-void                 epc_publisher_quit        (EpcPublisher        *publisher);
+void                 epc_publisher_run         (EpcPublisher      *publisher);
+void                 epc_publisher_run_async   (EpcPublisher      *publisher);
+void                 epc_publisher_quit        (EpcPublisher      *publisher);
 
-EpcContent*          epc_content_new           (const gchar         *type,
-                                                gchar               *data,
-                                                gsize                length);
-EpcContent*          epc_content_ref           (EpcContent          *content);
-EpcContent*          epc_content_unref         (EpcContent          *content);
+EpcContent*          epc_content_new           (const gchar       *type,
+                                                gpointer           data,
+                                                gsize              length);
+EpcContent*          epc_content_ref           (EpcContent        *content);
+void                 epc_content_unref         (EpcContent        *content);
 
 G_END_DECLS
 
